--- a/docs/development.org
+++ b/docs/development.org
@@ -4,4 +4,8 @@
 - Icons must be in =*.icns= format.
 - You can convert a =.png= to =.icns= using Preview, provided it is exactly =512px x 512px= (and 300dpi).
 
-
+* Design
+** Animation notes
+- Drawn in procreate
+- Brush: Drawing > Oberon
+- Color: #808080
